[package]
name = "fallrim_priority"
version = "4.0.0"
edition = "2021"

[lib]
name = "FallrimPriority"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-ini = "0.18.0"
msgbox = "0.7.0"
num_cpus = "1.15.0"
raw-cpuid = "10.7.0"

[dependencies.windows]
version = "0.44.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_Debug",
]
